--- a/css/home/style.css
+++ b/css/home/style.css
@@ -157,7 +157,9 @@ ul li a {
     color: #fff;
 
 }
-
+.brand img{
+    max-width: 150px;
+}
 .saasflix_hero_left p {
     color: #fff;
     font-size: 18px;
